feat(deployment): add Docker support and production configuration
- Create Dockerfile with multi‑stage build using Java 21 for OpenPDF 3.0 compatibility
- Add docker‑compose.yml for orchestration with MySQL and app containers
- Introduce DataLoader to automatically create default admin user on first start
- Externalize CORS allowed origins via FRONTEND_URLS environment variable
- Configure application-prod.yaml with production‑safe settings:
  - ddl-auto=validate, show-sql=false, connection pool tuning
  - Disable SQL init, reduce logging verbosity
  - Set JWT expiration to 24h
- Pass all sensitive credentials (DB, mail, JWT) through environment variables
- Update OpenPDF to version 3.0.0 (requires Java 21, addressed in Docker)
- Ensure environment variable fallback for CORS (prevents startup failure)
- Add healthcheck to MySQL service for proper dependency ordering

The application is now fully containerized and ready for production deployment.
All secrets are externalized, and the default admin is created automatically.