@@ -2,6 +2,7 @@ package com.vinayakit.hms.config;
 
 import com.vinayakit.hms.security.jwt.AuthTokenFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -18,7 +19,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -27,6 +28,9 @@ import java.util.Arrays;
 public class SecurityConfig {
 
     private final AuthTokenFilter authTokenFilter;
+
+    @Value("${cors.allowed-origins:*}")
+    private String allowedOrigins;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -45,19 +49,15 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // Public endpoints
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/api/rooms/available").permitAll()
-
-                        // Role-based rules
                         .requestMatchers("/api/staff/**").hasRole("ADMIN")
                         .requestMatchers("/api/dashboard/**").hasAnyRole("ADMIN", "MANAGER")
-                        .requestMatchers("/api/reports/**").hasAnyRole("ADMIN", "MANAGER")  // Added reports
+                        .requestMatchers("/api/reports/**").hasAnyRole("ADMIN", "MANAGER")
                         .requestMatchers("/api/bookings/**").hasAnyRole("ADMIN", "RECEPTIONIST", "MANAGER")
-                        .requestMatchers("/api/customers/**").hasAnyRole("ADMIN", "RECEPTIONIST", "MANAGER") // Added MANAGER
+                        .requestMatchers("/api/customers/**").hasAnyRole("ADMIN", "RECEPTIONIST", "MANAGER")
                         .requestMatchers("/api/rooms/**").hasAnyRole("ADMIN", "RECEPTIONIST")
                         .requestMatchers("/api/invoice/**").hasAnyRole("ADMIN", "MANAGER", "RECEPTIONIST")
-
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(authTokenFilter, UsernamePasswordAuthenticationFilter.class);
@@ -68,14 +68,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        List<String> origins = List.of(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(false);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
-
 }
